# azcam-bcspec

./: README.md  pyproject.toml  requirements-githib.txt  requirements.txt  setup.cfg
azcam_bcspec/: __init__.py  bcspec.py  bcspec_start.py  console.py  console_bcspec.py  index_bcspec.html  instrument_bcspec.py  server.py  server_bcspec.py  start_azcamtool.py
azcam_bok/bcspec/: console.py  index_bok.html  server.py  server_bcspec.py
azcam_bok/primefocus/: console.py  console_primefocus.py  index_bok.html  instrument_pf_ngserver.py  server.py  server_primefocus.py
support/: install.py  parameters_monitor_bcspec.ini  start_console_bcspec.bat  start_expstatus_bcspec.bat  start_expstatus_bcspec.py  start_monitor_bcspec.bat  start_monitor_bcspec.py  start_server_bcspec.py
support/Desktop/: BCSpec Console.lnk  BCSpec.lnk
support/datafolder/parameters/: parameters_monitor_bcspec.ini  parameters_server_bcspec.ini
support/datafolder/templates/: fits_template_bcspec_betsy.txt  fits_template_bcspec_cew.txt  fits_template_bcspec_groeller.txt  fits_template_bcspec_master.txt  fits_template_bcspec_patkelly.txt  fits_template_bcspec_taran.txt
