[project]
name = "azcam-bcspec"
version = "24.1"
description = "Azcam extension for Bok telescope B&C spectrograph facility camera"
authors = [{ name = "Michael Lesser" }, { email = "mlesser@arizona.edu" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ccd", "imaging", "astronomy", "sensors"]
dependencies = ["ipython", "rich", "azcam", "azcam_console"]

[project.urls]
Documentation = "https://azcam.readthedocs.io/"
Repository = "https://github.com/mplesser/azcam-bcspec/"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "azcam_bcspec"
